# pydantic-data-quality-e-tdd-para-dados

./: 404.html  README.md  index.html  my_duckdb.db  pyproject.toml  schema_crm.py
app/: etl.py  funcao.py  schema.py
docs/: index.md
search/: search_index.json
tests/: test_func_etl.py  test_funcao_projeto.py  teste_funcao_projeto.py
